--- a/Api_MusicWithin/src/main/resources/application.properties
+++ b/Api_MusicWithin/src/main/resources/application.properties
@@ -15,3 +15,11 @@ spring.servlet.multipart.max-file-size=1GB
 spring.servlet.multipart.max-request-size=1GB
 server.max-http-request-header-size=16KB
 server.tomcat.max-http-header-size=104857600
+
+#Servicio Email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=Pabloj.vilches.fernandez@gmail.com
+spring.mail.password=uwca ojba lezd pjxb
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
